--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -2,39 +2,24 @@ name: PHP Composer
 
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
-
-permissions:
-  contents: read
+    branches: [ "main" ]
 
 jobs:
   build:
 
-#    runs-on: ubuntu-latest
-    runs-on: ubuntu-20.04    
+    runs-on: ubuntu-latest
+    
 
     steps:
     - uses: actions/checkout@v3
 
-#    - name: Validate composer.json and composer.lock
-#      run: composer validate --strict
+    - name: Install PHP
+      run: |
+        apt update
+        apt install php php-curl
 
-    - name: Cache Composer packages
-      id: composer-cache
-      uses: actions/cache@v3
-      with:
-        path: vendor
-        key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-php-
+    - name: Check PHP
+      run: php -v
 
-    - name: Install dependencies
-      run: composer install --prefer-dist --no-progress
-
-    # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
-    # Docs: https://getcomposer.org/doc/articles/scripts.md
-
-    # - name: Run test suite
-    #   run: composer run-script test
+    - name: Copy files
+      run: ls  -la
