--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,15 +1,14 @@
-name: PHP Composer
+name: PHP
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
     
-
     steps:
     - uses: actions/checkout@v3
 
