--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -3,17 +3,27 @@ name: PHP
 on:
   push:
     branches: [ "master" ]
-  
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+  
+# Allow one concurrent deployment
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+  
 jobs:
+  # Build job
   build:
-
     runs-on: ubuntu-latest
-    
     steps:
-    - uses: actions/checkout@v3
-
+    - name: Download files from Git
+      uses: actions/checkout@v3
     - name: Install PHP
       uses: shivammathur/setup-php@v2
       with:
